--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "daisyui": "^4.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-router": "^6.20.1",
-    "react-router-dom": "^6.20.1",
+    "react-router-dom": "^6.21.0",
     "scss": "^0.2.4"
   },
   "devDependencies": {
