--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "chart.js": "^4.4.1",
     "daisyui": "^4.4.19",
     "date-fns": "^3.0.0",
+    "flowbite": "^2.2.1",
+    "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
