--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
+    "@material-tailwind/react": "^2.1.8",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-table": "^8.11.2",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
     "daisyui": "^4.4.19",
@@ -22,6 +24,7 @@
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
