--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # VITE_BASE_URL=http://localhost:3000
-VITE_BASE_URL=https://powerful-hare-drawers.cyclic.app/
+VITE_BASE_URL=https://powerful-hare-drawers.cyclic.app
